@startuml TopologyRelationship

package TopologyAPI {
    class Topology {
        - ID: String
        - components: ArrayList<Device>
        .. Constructors ..
        + Topology(ID: String, components: ArrayList<Device>)
        .. Getters and Setters ..
        + getID(): String
        + setID(ID: String): void
        + getComponents(): ArrayList<Device>
        + setComponents(components: ArrayList<Device>): void
    }

    class Device {
        - type: String
        - ID: String
        - characteristic: Characteristic
        - netList: HashMap<String, String>
        .. Constructors ..
        + Device(type: String, ID: String, characteristic: Characteristic, netList: HashMap<String, String>)
        .. Getters and Setters ..
        + getType(): String
        + setType(type: String): void
        + getID(): String
        + setID(ID: String)): void
        + getcharacteristic(): Characteristic
        + setCharacteristic(characteristic: Characteristic): void
        + getNetList(): HashMap<String, String>
        + setNetList(netList: HashMap<String, String>): void
    }

    class Characteristic {
        - name: String
        - defaultValue: double
        - minValue: double
        - maxValue: double
        .. Constructors ..
        + Characteristic(name: String, defaultValue: double, minValue: double, maxValue: double)
        .. Getters and Setters ..
        + getDefaultValue(): double
        + setDefaultValue(defaultValue: double): void
        + getMinValue(): double
        + setMinValue(minValue: double): void
        + getMaxValue(): double
        + setMaxValue(maxValue: double): void
        + getName(): String
        + setName(type: String): void
    }

    Topology *-- Device
    Device *-- Characteristic
}

@enduml